Add more tests and fixes indexing stuff